--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "dashboard",
+  "name": "tabletop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "cuid": "^2.1.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-scripts": "3.4.3"
   },
   "scripts": {
