--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-feather": "^2.0.8",
     "react-scripts": "3.4.3"
   },
   "scripts": {
