--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@meltwater/fetch-favicon": "^1.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -19,6 +18,7 @@
     "react-feather": "^2.0.9",
     "react-rnd": "^10.2.4",
     "react-scripts": "3.4.3",
+    "super-tiny-icons": "^0.4.0",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
