--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.2",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,6 +19,7 @@
     "react-feather": "^2.0.9",
     "react-rnd": "^10.2.4",
     "react-scripts": "3.4.3",
+    "sass": "^1.35.1",
     "super-tiny-icons": "^0.4.0",
     "universal-cookie": "^4.0.4"
   },
