--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cuid": "^2.1.8",
     "formik": "^2.2.0",
     "localbase": "^0.7.4",
+    "localforage": "^1.9.0",
     "luxon": "^1.25.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
