--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,13 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "name": "TableTop",
+  "description": "A macOS Dock inspired New Tab override.",
+  "version": "0.3",
+  "manifest_version": 2,
+  "author": "veeru153",
+  "homepage_url": "https://github.com/veeru153/tabletop",
+  "incognito": "split",
+  "chrome_url_overrides": {
+    "newtab": "index.html"
+  },
+  "content_security_policy": "script-src 'self'; style-src 'self' 'sha256-s8oZn728h+t0WNV6s+2xieaG3i2RB5cO2MMiUDIdinY='"
 }
