--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cspbuild": "INLINE_RUNTIME_CHUNK=false react-scripts build && mv build dist",
-    "webbuild": "react-scripts build && mv build dist-web"
+    "cspbuild": "INLINE_RUNTIME_CHUNK=false react-scripts build && cp build/* dist",
+    "webbuild": "react-scripts build && cp build/* dist-web"
   },
   "eslintConfig": {
     "extends": "react-app"
