--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tabletop",
   "version": "1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -29,8 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cspbuild": "INLINE_RUNTIME_CHUNK=false react-scripts build && cp build/* dist",
-    "webbuild": "react-scripts build && cp build/* dist-web"
+    "cspbuild": "INLINE_RUNTIME_CHUNK=false react-scripts build -r && cp build/* dist",
+    "webbuild": "react-scripts build && cp -r build/* dist-web"
   },
   "eslintConfig": {
     "extends": "react-app"
