--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cspbuild": "INLINE_RUNTIME_CHUNK=false react-scripts build && cp build/* dist",
-    "webbuild": "react-scripts build && cp build/* dist-web"
+    "webbuild": "react-scripts build && cp build/* dist-web && cp .gitignore dist-web"
   },
   "eslintConfig": {
     "extends": "react-app"
