--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "cuid": "^2.1.8",
     "formik": "^2.2.0",
     "localforage": "^1.9.0",
+    "lucide-react": "^0.16.29",
     "luxon": "^1.25.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
-    "react-feather": "^2.0.9",
     "super-tiny-icons": "^0.4.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@types/luxon": "^2.0.9",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "sass": "^1.35.1",
     "typescript": "^4.5.4",
-    "vite": "^2.8.0",
-    "sass": "^1.35.1"
+    "vite": "^2.8.0"
   }
 }
