--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "recoil": "^0.6.1",
     "super-tiny-icons": "^0.4.0",
     "universal-cookie": "^4.0.4"
   },
